<resources>
    <string name="app_name">Devoir3</string>
    <string name="LienCours">Lien de la séance</string>
    <string name="description">Description de la séance</string>
    <string name="lienRick">https://www.youtube.com/watch?v=dQw4w9WgXcQ</string>
    <string name="MesCours">Mes Cours</string>
    <string name="recherchedecours">Recherche de cours</string>
    <string name="rechercheruncours">Rechercher un cours</string>
    <string name="calendrier">Calendrier</string>
    <string name="Message">Messages</string>
    <string name="prochainesremise">Prochaine remise:</string>
    <string name="devoir3">Devoir 3 /Date: 01/04/2021</string>
    <string name="professeur">Professeur:</string>
    <string name="Messagerie">Messagerie</string>
    <string name="Recherche">Recherche</string>
    <string name="vous">Vous</string>
    <string name="heure">20h46</string>
    <string name="envoyer">Envoyer</string>

    <string name="app_title">StudiuMontreal</string>
    <string name="email_label">Courriel</string>
    <string name="password_label">Mot de passe</string>
    <string name="login_label">Se Connecter</string>
    <string name="forgot_password_label">Mot de passe oublié?</string>
    <string name="wrong_email_password_combinaison_label">La combinaison courriel/mot de passe entrée est erronée.</string>

    <string name="forgot_password_title_label">Mot de passe oublié</string>
    <string name="forgot_password_reinitialise_label">Réinitialiser</string>
    <string name="forgot_password_message_sent_label">Un lien de réinitialisation a été envoyé par courriel. (Fonctionnalité non implémentée)</string>

    <string name="calendar_title_label">Calendrier</string>
    <string-array name="months_name">
        <item>Janvier</item>
        <item>Février</item>
        <item>Mars</item>
        <item>Avril</item>
        <item>Mai</item>
        <item>Juin</item>
        <item>Juillet</item>
        <item>Août</item>
        <item>Septembre</item>
        <item>Octobre</item>
        <item>Novembre</item>
        <item>Décembre</item>
    </string-array>

    <string name="sunday_letter">D</string>
    <string name="monday_letter">L</string>
    <string name="tuesday_letter">M</string>
    <string name="wednesday_letter">M</string>
    <string name="thursday_letter">J</string>
    <string name="friday_letter">V</string>
    <string name="saturday_letter">S</string>

    <string name="calendar_left_arrow_content_description">Mois précédent</string>
    <string name="calendar_right_arrow_content_description">Mois suivant</string>

    <string name="notification_button_description">Notifications</string>
    <string name="profile_button_description">Profile</string>
    
    <string name="add_homework_button">Ajouter un devoir</string>
    <string name="homework_activity_image_description">Image du cours</string>
    <string name="homework_activity_close_button">Fermer</string>

    <string name="title_activity_parametre">Parametre</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">Settings</string>
</resources>