<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"

    >


    <TextView
        android:id="@+id/titreCours"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/prochaine"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/prochainesremise"/>
    <TextView
        android:id="@+id/Devoir"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/devoir3"/>
    <TextView
        android:id="@+id/ProfesseurLabel"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/professeur"/>
    <TextView
        android:id="@+id/nomProf"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        />
    <TextView
        android:id="@+id/courrielProf"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />



</LinearLayout>