<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/white"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/navigation" />

    <TextView
        android:id="@+id/calendarTitleLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="24dp"
        android:text="@string/calendar_title_label"
        android:textColor="@color/main_dark_blue"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/previousMonthButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/optionarrow"
        android:contentDescription="@string/calendar_left_arrow_content_description"
        android:rotationY="180"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/calendarMonthNameRecyclerView"
        app:layout_constraintEnd_toStartOf="@+id/calendarMonthNameRecyclerView"
        app:layout_constraintTop_toTopOf="@+id/calendarMonthNameRecyclerView"
        app:srcCompat="@drawable/optionarrow" />

    <ImageButton
        android:id="@+id/nextMonthButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/optionarrow"
        android:contentDescription="@string/calendar_right_arrow_content_description"
        android:rotationY="0"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/calendarMonthNameRecyclerView"
        app:layout_constraintStart_toEndOf="@+id/calendarMonthNameRecyclerView"
        app:layout_constraintTop_toTopOf="@+id/calendarMonthNameRecyclerView"
        app:srcCompat="@drawable/optionarrow" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarMonthNameRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="555dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/calendarNotificationButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="27dp"
        android:background="@drawable/notification"
        android:contentDescription="@string/notification_button_description"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/notification" />

    <ImageButton
        android:id="@+id/calendarProfileButton"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/iconeprofil_foreground"
        android:contentDescription="@string/profile_button_description"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iconeprofil_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>